# max_rank_cpp

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
examples/: queryfile.txt
examples/Test3D50/: ResultsBF250.csv  data_42.csv
examples/Test4D250/: ResultsBF250.csv  data_1337.csv
include/: cell.h  context.h  csvutils.h  geom.h  halfspace.h  lrucache.h  maxrank.h  qnode.h  qtree.h  query.h  utils.h
src/: CMakeLists.txt  cell.cpp  context.cpp  csvutils.cpp  geom.cpp  halfspace.cpp  lrucache.cpp  main.cpp  maxrank.cpp  qnode.cpp  qtree.cpp  query.cpp  utils.cpp
tests/: CMakeLists.txt  test_qnode.cpp  test_qtree.cpp
